updated bib file

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3775,7 +3775,7 @@ Now available to download in full as a PDF.},
 }
 
 @Misc{APUS_0,
-  author  = {Unkown},
+  author  = {APUS},
   title   = {APUS, aircraft manufacturer},
   note    = {https://group.apus-aero.com/zero-emission - 27.02.2024},
   url     = {https://group.apus-aero.com/zero-emission/},
@@ -3786,7 +3786,7 @@ Now available to download in full as a PDF.},
 }
 
 @Misc{APUS_1,
-  author  = {Unkown},
+  author  = {APUS},
   title   = {APUS, aircraft manufacturer},
   note    = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf - 27.02.2024},
   url     = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf},
@@ -4041,6 +4041,510 @@ and Guidance Material for Large Rotorcraft CS-29},
   title        = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23) (Amendment 4). EASA,},
 }
 
+
+@TechReport{EU_79_2009,
+  author      = {{European Union}},
+  institution = {European Union},
+  title       = {Regulation (EC) No 79/2009 of the European Parliament and of the Council of 14 January 2009 on type-approval of hydrogen-powered motor vehicles, and amending Directive 2007/46/EC (Text with EEA relevance), Document 32009R0079},
+  url = {https://eur-lex.europa.eu/eli/reg/2009/79/oj},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{EU_406_2010,
+  author      = {{European Union}},
+  institution = {European Union},
+  title       = {Commission Regulation (EU) No 406/2010 of 26 April 2010 implementing Regulation (EC) No 79/2009 of the European Parliament and of the Council on type-approval of hydrogen-powered motor vehicles (Text with EEA relevance), Document 32010R0406},
+  url = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex:32010R0406},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{EU_134,
+  author      = {{European Union}},
+  institution = {European Union},
+  title       = {Regulation No 134 of the Economic Commission for Europe of the United Nations (UN/ECE) — Uniform provisions concerning the approval of motor vehicles and their components with regard to the safety-related performance of hydrogen-fuelled vehicles (HFCV) [2019/795]},
+  url = {https://op.europa.eu/en/publication-detail/-/publication/8aad3d19-7870-11e9-9f05-01aa75ed71a1/language-en},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{GT_13,
+  author      = {{Global technical regulation}},
+  institution = {Global technical regulation},
+  title       = {UN GTR No. 13 -  Global Technical Regulation concerning the hydrogen and fuel cell vehicles},
+  url = {https://unece.org/transport/standards/transport/vehicle-regulations-wp29/global-technical-regulations-gtrs},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{ansi_2014,
+  author      = {{American National Standards Institute}},
+  institution = {American National Standards Institute},
+  title       = {CSA/ANSI HGV 2-2014 (R2019), ANSI HGV 2-2014 - Compressed hydrogen gas vehicle fuel containers},
+  url = {https://webstore.ansi.org/standards/csa/csaansihgv2014r2019},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{sae_j2579,
+  author      = {{SAE International }},
+  institution = {SAE International },
+  title       = {Standard for Fuel Systems in Fuel Cell and Other Hydrogen Vehicles J2579_202301},
+  url = {https://www.sae.org/standards/content/j2579_202301/},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@article{iijima2015development,
+  title={Development of material testing equipment in high pressure gaseous hydrogen and international collaborative work of a testing method for a hydrogen society—Toward contribution to international standardization—},
+  author={IIJIMA, Takashi and ABE, Takayuki and ITOGA, Hisatake},
+  journal={Synthesiology English edition},
+  volume={8},
+  number={2},
+  pages={61--69},
+  year={2015},
+  groups      = {norms},
+  publisher={National Institute of Advanced Industrial Science and Technology}
+}
+
+
+@MISC{jari_001,
+  author      = {{Japan Automobile Standards Internationalization Center (JASIC)}},
+  institution = {Japan Automobile Standards Internationalization Center (JASIC)},
+  title       = {Japan — JARI S001(2004) Technical Standard for Containers of Compressed Hydrogen Vehicle Fuel Devices },
+  url = {https://unece.org/DAM/trans/doc/2008/wp29grsp/SGS-3-09e.pdf},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@MISC{jari_002,
+  author      = {{Japan Automobile Standards Internationalization Center (JASIC)}},
+  institution = {Japan Automobile Standards Internationalization Center (JASIC)},
+  title       = {Japan – JARI S002(2004) Technical Standard for Components of Compressed Hydrogen Vehicle Fuel Devices;},
+  url = {https://unece.org/DAM/trans/doc/2008/wp29grsp/SGS-3-09e.pdf},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@MISC{jari_003,
+  author      = {{Jari}},
+  institution = {Jari},
+  title       = {Japan – JARI S003(2018) Technical Standard for Seamless Containers of Compressed Hydrogen Vehicle Fuel Devices;},
+  url = {https://www.jari.or.jp/information/news/press-release/17933/},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+
+@MISC{global_registry,
+  author      = {{United Nations}},
+  institution = {United Nations},
+  title       = {Addendum 13: UN Global Technical Regulation No. 13},
+  url = {https://unece.org/sites/default/files/2023-07/ECE-TRANS-180-Add.13-Amend1e.pdf},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@MISC{eihp,
+  author      = {{EU, Reinhold Wurster}},
+  institution = {EU},
+  title       = {European Integrated Hydrogen Project, EIHP Final Reports},
+  url = {http://www.eihp.org/public/publications.html},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@TechReport{iso_15869,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {ISO/TS 15869:2009 Gaseous hydrogen and hydrogen blends — Land vehicle fuel tanks},
+  url = {https://www.iso.org/standard/52871.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_19881,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {ISO 19881:2018 Gaseous hydrogen — Land vehicle fuel containers},
+  url = {https://www.iso.org/standard/65029.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_19881_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {ISO/DIS 19881 Gaseous hydrogen — Land vehicle fuel containers},
+  url = {https://www.iso.org/standard/82595.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_17519,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {ISO/TS 17519:2019 Gas cylinders — Refillable permanently mounted composite tubes for transportation},
+  url = {https://www.iso.org/standard/77998.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+/* -------------------------------------------------------------------------- */
+@TechReport{iso_14687,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {ISO/DIS 14687 Hydrogen fuel quality — Product specification},
+  url = {https://www.iso.org/standard/82660.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+@TechReport{iso_15916,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/TR 15916:2015 Basic considerations for the safety of hydrogen systems},
+  url = {https://www.iso.org/standard/56546.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+@TechReport{iso_19880_5,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19880-5:2019 Gaseous hydrogen — Fuelling stations
+Part 5: Dispenser hoses and hose assemblies},
+  url = {https://www.iso.org/standard/73787.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19880_6,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/CD 19880-6 Gaseous hydrogen — Fueling stations
+Part 6: Fittings},
+  url = {https://www.iso.org/standard/81330.html},
+  
+  urldate = {2023-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19880_7,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 19880-7 Gaseous hydrogen — Fuelling stations
+Part 7: Rubber O-rings},
+  url = {https://www.iso.org/standard/81701.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19880_8,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19880-8:2019 Gaseous hydrogen — Fuelling stations
+Part 8: Fuel quality control},
+  url = {https://www.iso.org/standard/69540.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19880_9,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19880-9:2024 Gaseous hydrogen — Fuelling stations
+Part 9: Sampling for fuel quality analysis},
+  url = {https://www.iso.org/standard/82251.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+@TechReport{iso_19882,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19882:2018 Gaseous hydrogen — Thermally activated pressure relief devices for compressed hydrogen vehicle fuel containers},
+  url = {https://www.iso.org/standard/64655.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19882_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 19882 Gaseous hydrogen — Thermally activated pressure relief devices for compressed hydrogen vehicle fuel containers},
+  url = {https://www.iso.org/standard/82596.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+/* -------------------------------------------------------------------------- */
+
+@TechReport{iso_19884_1,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI 19884-1 Gaseous Hydrogen - Pressure vessels for stationary storage},
+  url = {https://www.iso.org/standard/87726.html},
+  
+  urldate = {202-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+@TechReport{iso_19884_2,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI TR 19884-2 Gaseous Hydrogen - Pressure vessels for stationary storage Part 2: Material test data of class A materials (steels and aluminum alloys) compatible to hydrogen service},
+  url = {https://www.iso.org/standard/86285.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_19884_3,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI TR 19884-3 Gaseous Hydrogen - Pressure vessels for stationary storage Part 3: Pressure cycle test data to demonstrate shallow pressure cycle estimation methods},
+  url = {https://www.iso.org/standard/86286.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+@TechReport{iso_19885_1,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19885-1:2024 Gaseous hydrogen — Fuelling protocols for hydrogen-fuelled vehicles Part 1: Design and development process for fuelling protocols},
+  url = {https://www.iso.org/standard/82556.html},
+  
+  urldate = {2023-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19885_2,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI 19885-2
+Gaseous hydrogen — Fuelling protocols for hydrogen-fuelled vehicles
+Part 2: Part 2: Definition of communications between the vehicle and dispenser control systems},
+  url = {https://www.iso.org/standard/89209.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19885_3,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI 19885-3
+Gaseous hydrogen — Fuelling protocols for hydrogen-fuelled vehicles
+Part 3: High flow hydrogen fuelling protocols for heavy duty road vehicles},
+  url = {https://www.iso.org/standard/89206.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_19887,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 19887 Gaseous Hydrogen — Fuel system components for hydrogen fuelled vehicles},
+  url = {https://www.iso.org/standard/65490.html},
+  
+  urldate = {2023-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_22734_1,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 22734-1
+Hydrogen generators using water electrolysis
+Part 1: General requirements, test protocols and safety requirements},
+  url = {https://www.iso.org/standard/82766.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_22734_2,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/WD TR 22734-2
+Hydrogen generators using water electrolysis
+Part 2: Testing guidance for performing electricity grid service
+},
+  url = {https://www.iso.org/standard/81869.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_17268,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO 17268:2020
+Gaseous hydrogen land vehicle refuelling connection devices},
+  url = {https://www.iso.org/standard/68442.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+@TechReport{iso_17268_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 17268-1
+Gaseous hydrogen land vehicle refuelling connection devices
+Part 1: Flow capacities up to and including 120 g/s},
+  url = {https://www.iso.org/standard/86283.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+
+
+/* -------------------------------------------------------------------------- */
+
+
+@TechReport{adr_2023,
+  author      = {{UNECE}},
+  institution = {UNECE},
+  title       = {ADR 2023 - Agreement concerning the International Carriage of Dangerous Goods by Road},
+  url = {https://unece.org/transport/standards/transport/dangerous-goods/adr-2023-agreement-concerning-international-carriage},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{din_en_12245,
+  author      = {DIN Media GmbH},
+  institution = {DIN Media GmbH},
+  title       = {Transportable gas cylinders - Fully wrapped composite cylinders; German version EN 12245:2009+A1:2011},
+  url = {https://www.dinmedia.de/de/norm/din-en-12245/148759737},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@techreport{simon2007guidelines,
+  title={U.S. Department of Transportation, Guidelines for use of hydrogen fuel in commercial vehicles},
+  author={Simon, John M and Brady, Stephen and Lowell, Dana and Quant, Michael},
+  year={2007}
+}
+
+
+@MISC{tped,
+  author      = {APRAGAZ},
+  title       = {Transportable pressure equipment (TPED)},
+  url = {https://apragaz.com/en/enterprises-industry/transportable-pressure-equipment-adr-rid-imdg-vehicles/tped},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@MISC{eu_ped,
+  author      = {European Union},
+  title       = {Directive 2014/68/EU of the European Parliament and of the Council of 15 May 2014 on the harmonisation of the laws of the Member States relating to the making available on the market of pressure equipment (recast) Text with EEA relevance, Document 32014L0068 },
+  url = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32014L0068},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+
+@MISC{asme_hydro,
+  author      = {The American Society of Mechanical Engineers (ASME)},
+  title       = {The American Society of Mechanical Engineers (ASME), offers multiple hydrogen related standards},
+  url = {https://www.asme.org/codes-standards},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
 
 
 
