--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4211,6 +4211,17 @@ and Guidance Material for Large Rotorcraft CS-29},
 @TechReport{iso_14687,
   author      = {{International Organization for Standardization}},
   institution = {International Organization for Standardization},
+  title       = {ISO 14687:2019
+Hydrogen fuel quality — Product specification},
+  url = {https://www.iso.org/standard/69539.html},
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
+@TechReport{iso_14687_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
   title       = {ISO/DIS 14687 Hydrogen fuel quality — Product specification},
   url = {https://www.iso.org/standard/82660.html},
   urldate = {2024-09-08},
@@ -4232,6 +4243,19 @@ and Guidance Material for Large Rotorcraft CS-29},
   groups      = {norms},
 }
 
+@TechReport{iso_15916_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/AWI TS 15916
+Hydrogen technologies — Basic considerations for the safety of hydrogen systems},
+  url = {https://www.iso.org/standard/89423.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
 
 
 @TechReport{iso_19880_5,
@@ -4247,6 +4271,20 @@ Part 5: Dispenser hoses and hose assemblies},
   groups      = {norms},
 }
 
+@TechReport{iso_19880_5_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 19880-5
+Gaseous hydrogen — Fuelling stations
+Part 5: Dispenser hoses and hose assemblies},
+  url = {https://www.iso.org/standard/87684.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
 
 @TechReport{iso_19880_6,
   author      = {{International Organization for Standardization}},
@@ -4256,7 +4294,7 @@ Part 5: Dispenser hoses and hose assemblies},
 Part 6: Fittings},
   url = {https://www.iso.org/standard/81330.html},
   
-  urldate = {2023-09-08},
+  urldate = {2023-01-07},
   type        = {Regulation},
   groups      = {norms},
 }
@@ -4289,6 +4327,20 @@ Part 8: Fuel quality control},
   groups      = {norms},
 }
 
+@TechReport{iso_19880_8_New,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  
+  title       = {ISO/DIS 19880-8
+Gaseous hydrogen — Fuelling stations
+Part 8: Fuel quality control},
+  url = {https://www.iso.org/standard/83949.html},
+  
+  urldate = {2024-09-08},
+  type        = {Regulation},
+  groups      = {norms},
+}
+
 
 @TechReport{iso_19880_9,
   author      = {{International Organization for Standardization}},
@@ -4302,7 +4354,6 @@ Part 9: Sampling for fuel quality analysis},
   type        = {Regulation},
   groups      = {norms},
 }
-
 
 
 @TechReport{iso_19882,
@@ -4330,7 +4381,6 @@ Part 9: Sampling for fuel quality analysis},
   groups      = {norms},
 }
 
-/* -------------------------------------------------------------------------- */
 
 @TechReport{iso_19884_1,
   author      = {{International Organization for Standardization}},
@@ -4339,7 +4389,7 @@ Part 9: Sampling for fuel quality analysis},
   title       = {ISO/AWI 19884-1 Gaseous Hydrogen - Pressure vessels for stationary storage},
   url = {https://www.iso.org/standard/87726.html},
   
-  urldate = {202-09-08},
+  urldate = {2024-09-08},
   type        = {Regulation},
   groups      = {norms},
 }
@@ -4379,7 +4429,7 @@ Part 9: Sampling for fuel quality analysis},
   title       = {ISO 19885-1:2024 Gaseous hydrogen — Fuelling protocols for hydrogen-fuelled vehicles Part 1: Design and development process for fuelling protocols},
   url = {https://www.iso.org/standard/82556.html},
   
-  urldate = {2023-09-08},
+  urldate = {2023-01-07},
   type        = {Regulation},
   groups      = {norms},
 }
@@ -4422,7 +4472,7 @@ Part 3: High flow hydrogen fuelling protocols for heavy duty road vehicles},
   title       = {ISO 19887 Gaseous Hydrogen — Fuel system components for hydrogen fuelled vehicles},
   url = {https://www.iso.org/standard/65490.html},
   
-  urldate = {2023-09-08},
+  urldate = {2023-01-07},
   type        = {Regulation},
   groups      = {norms},
 }
@@ -4453,7 +4503,7 @@ Part 2: Testing guidance for performing electricity grid service
 },
   url = {https://www.iso.org/standard/81869.html},
   
-  urldate = {2024-09-08},
+  urldate = {2023-01-07},
   type        = {Regulation},
   groups      = {norms},
 }
