inital okay state for subsection importance of standards

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4596,13 +4596,134 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups      = {norms, webpages},
 }
 
+@Article{Narayanan2012,
+  author       = {Narayanan, V.K. and Chen, Tianxu},
+  date         = {2012-10},
+  journaltitle = {Research Policy},
+  title        = {Research on technology standards: Accomplishment and challenges},
+  doi          = {10.1016/j.respol.2012.02.006},
+  issn         = {0048-7333},
+  number       = {8},
+  pages        = {1375--1406},
+  volume       = {41},
+  groups       = {standards_section},
+  publisher    = {Elsevier BV},
+}
 
+@Article{Zoo2017,
+  author       = {Zoo, Hanah and de Vries, Henk J. and Lee, Heejin},
+  date         = {2017-05},
+  journaltitle = {Technological Forecasting and Social Change},
+  title        = {Interplay of innovation and standardization: Exploring the relevance in developing countries},
+  doi          = {10.1016/j.techfore.2017.02.033},
+  issn         = {0040-1625},
+  pages        = {334--348},
+  volume       = {118},
+  groups       = {standards_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Jiang2018,
+  author       = {Jiang, Hong and Zhao, Shukuan and Zhang, Zuopeng (Justin) and Yi, Yali},
+  date         = {2018-10},
+  journaltitle = {Technological Forecasting and Social Change},
+  title        = {Exploring the mechanism of technology standardization and innovation using the solidification theory of binary eutectic alloy},
+  doi          = {10.1016/j.techfore.2017.08.015},
+  issn         = {0040-1625},
+  pages        = {217--228},
+  volume       = {135},
+  groups       = {standards_section},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Nickerson2006,
+  author       = {Nickerson and Muehlen},
+  date         = {2006},
+  journaltitle = {MIS Quarterly},
+  title        = {The Ecology of Standards Processes: Insights from Internet Standard Making},
+  doi          = {10.2307/25148769},
+  issn         = {0276-7783},
+  pages        = {467},
+  volume       = {30},
+  groups       = {strandard_defintion},
+  publisher    = {JSTOR},
+}
+
+@Article{Tassey2000,
+  author       = {Tassey, Gregory},
+  date         = {2000-04},
+  journaltitle = {Research Policy},
+  title        = {Standardization in technology-based markets},
+  doi          = {10.1016/s0048-7333(99)00091-8},
+  issn         = {0048-7333},
+  number       = {4–5},
+  pages        = {587--602},
+  volume       = {29},
+  groups       = {strandard_defintion},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Anderson1990,
+  author       = {Anderson, Philip and Tushman, Michael L.},
+  date         = {1990-12},
+  journaltitle = {Administrative Science Quarterly},
+  title        = {Technological Discontinuities and Dominant Designs: A Cyclical Model of Technological Change},
+  doi          = {10.2307/2393511},
+  issn         = {0001-8392},
+  number       = {4},
+  pages        = {604},
+  volume       = {35},
+  groups       = {strandard_defintion},
+  publisher    = {JSTOR},
+}
+
+@Article{Murmann2006,
+  author       = {Murmann, Johann Peter and Frenken, Koen},
+  date         = {2006-09},
+  journaltitle = {Research Policy},
+  title        = {Toward a systematic framework for research on dominant designs, technological innovations, and industrial change},
+  doi          = {10.1016/j.respol.2006.04.011},
+  issn         = {0048-7333},
+  number       = {7},
+  pages        = {925--952},
+  volume       = {35},
+  groups       = {strandard_defintion},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Farrell1992,
+  author       = {Farrell, Joseph and Saloner, Garth},
+  date         = {1992-03},
+  journaltitle = {The Journal of Industrial Economics},
+  title        = {Converters, Compatibility, and the Control of Interfaces},
+  doi          = {10.2307/2950625},
+  issn         = {0022-1821},
+  number       = {1},
+  pages        = {9},
+  volume       = {40},
+  groups       = {strandard_defintion},
+  publisher    = {JSTOR},
+}
+
+@Article{Morse2018,
+  author       = {Morse, Edward and Dantan, Jean-Yves and Anwer, Nabil and Söderberg, Rikard and Moroni, Giovanni and Qureshi, Ahmed and Jiang, Xiangqian and Mathieu, Luc},
+  date         = {2018},
+  journaltitle = {CIRP Annals},
+  title        = {Tolerancing: Managing uncertainty from conceptual design to final product},
+  doi          = {10.1016/j.cirp.2018.05.009},
+  issn         = {0007-8506},
+  number       = {2},
+  pages        = {695--717},
+  volume       = {67},
+  groups       = {standards_section},
+  publisher    = {Elsevier BV},
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
-1 StaticGroup:hydrogen\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:hydrogen\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Hydrogen_Tests\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:general_environment\;0\;0\;0x8a8a8aff\;\;\;;
@@ -4620,6 +4741,8 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
+2 StaticGroup:standards_section\;0\;0\;0x7c7c7cff\;\;\;;
+3 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
 1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
