--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4013,14 +4013,14 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
-@MISC{SAE_Gas,
+@Misc{SAE_Gas,
   author      = {{SAE International}},
-  institution = {SAE International},
-  title       = {Gaseous Hydrogen Storage for General Aviation AS7373, WIP 2021-07-06 },
-  url = {https://www.sae.org/standards/content/as7373/},
-  urldate = {2024-09-06},
+  title       = {Gaseous Hydrogen Storage for General Aviation AS7373, WIP 2021-07-06},
   type        = {Certification Specification},
+  url         = {https://www.sae.org/standards/content/as7373/},
+  urldate     = {2024-09-06},
   groups      = {norms, webpages},
+  institution = {SAE International},
 }
 
 @MISC{SAE_Liquid,
@@ -4094,11 +4094,11 @@ and Guidance Material for Large Rotorcraft CS-29},
 
 @TechReport{sae_j2579,
   author      = {{SAE International }},
-  institution = {SAE International },
+  institution = {SAE International},
   title       = {Standard for Fuel Systems in Fuel Cell and Other Hydrogen Vehicles J2579_202301},
-  url = {https://www.sae.org/standards/content/j2579_202301/},
-  urldate = {2024-09-08},
   type        = {Regulation},
+  url         = {https://www.sae.org/standards/content/j2579_202301/},
+  urldate     = {2024-09-08},
   groups      = {norms},
 }
 
@@ -4115,14 +4115,14 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
-@MISC{jari_001,
+@Misc{jari_001,
   author      = {{Japan Automobile Standards Internationalization Center (JASIC)}},
-  institution = {Japan Automobile Standards Internationalization Center (JASIC)},
-  title       = {Japan — JARI S001(2004) Technical Standard for Containers of Compressed Hydrogen Vehicle Fuel Devices },
-  url = {https://unece.org/DAM/trans/doc/2008/wp29grsp/SGS-3-09e.pdf},
-  urldate = {2024-09-06},
+  title       = {Japan — JARI S001(2004) Technical Standard for Containers of Compressed Hydrogen Vehicle Fuel Devices},
   type        = {Certification Specification},
+  url         = {https://unece.org/DAM/trans/doc/2008/wp29grsp/SGS-3-09e.pdf},
+  urldate     = {2024-09-06},
   groups      = {norms, webpages},
+  institution = {Japan Automobile Standards Internationalization Center (JASIC)},
 }
 
 @MISC{jari_002,
@@ -4496,15 +4496,10 @@ Part 1: General requirements, test protocols and safety requirements},
 @TechReport{iso_22734_2,
   author      = {{International Organization for Standardization}},
   institution = {International Organization for Standardization},
-  
-  title       = {ISO/WD TR 22734-2
-Hydrogen generators using water electrolysis
-Part 2: Testing guidance for performing electricity grid service
-},
-  url = {https://www.iso.org/standard/81869.html},
-  
-  urldate = {2022-12-07},
+  title       = {ISO/WD TR 22734-2 Hydrogen generators using water electrolysis Part 2: Testing guidance for performing electricity grid service},
   type        = {Regulation},
+  url         = {https://www.iso.org/standard/81869.html},
+  urldate     = {2022-12-07},
   groups      = {norms},
 }
 
@@ -4577,13 +4572,13 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups      = {norms, webpages},
 }
 
-@MISC{eu_ped,
-  author      = {European Union},
-  title       = {Directive 2014/68/EU of the European Parliament and of the Council of 15 May 2014 on the harmonisation of the laws of the Member States relating to the making available on the market of pressure equipment (recast) Text with EEA relevance, Document 32014L0068 },
-  url = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32014L0068},
+@Misc{eu_ped,
+  author  = {European Union},
+  title   = {Directive 2014/68/EU of the European Parliament and of the Council of 15 May 2014 on the harmonisation of the laws of the Member States relating to the making available on the market of pressure equipment (recast) Text with EEA relevance, Document 32014L0068},
+  type    = {Certification Specification},
+  url     = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32014L0068},
   urldate = {2024-09-06},
-  type        = {Certification Specification},
-  groups      = {norms, webpages},
+  groups  = {norms, webpages},
 }
 
 
@@ -4717,6 +4712,16 @@ Part 1: Flow capacities up to and including 120 g/s},
   volume       = {67},
   groups       = {standards_section},
   publisher    = {Elsevier BV},
+}
+
+@Book{Mensen2013,
+  author    = {Mensen, Heinrich},
+  date      = {2013},
+  title     = {Handbuch der Luftfahrt},
+  doi       = {10.1007/978-3-642-34402-2},
+  isbn      = {9783642344022},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {standards_section},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
