some progress aero standards

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3946,10 +3946,21 @@ Now available to download in full as a PDF.},
 }
 
 
+@TechReport{EASA_CS_22,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications,Acceptable Means of Compliance and Guidance Material for Sailplanes and Powered Sailplanes (CS-22)},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-22-sailplanes-and-powered-sailplanes#cs-22-sailplanes-and-powered-sailplanes},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
 @TechReport{EASA_CS_23,
   author      = {{European Union Aviation Safety Agency}},
   institution = {European Union Aviation Safety Agency},
-  title       = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23)},
+  title       = {Certification Specifications for Normal, Utility, Aerobatic, and Commuter Category Aeroplanes CS-23},
   url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-23-normal-utility-aerobatic-and-commuter-aeroplanes#cs-23-normal-utility-aerobatic-and-commuter-aeroplanes},
   urldate = {2024-09-04},
   type        = {Certification Specification},
@@ -3963,6 +3974,17 @@ Now available to download in full as a PDF.},
   title       = {Certification Specifications and Acceptable Means of Compliance for Large Aeroplanes (CS-25)},
   url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-25-large-aeroplanes#cs-25-large-aeroplanes},
   urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_26,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Guidance Material for Additional airworthiness specifications for operations CS-26},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-26-additional-airworthiness-specifications-for-operations#cs-26-additional-airworthiness-specifications-for-operations},
+  urldate = {2024-09-24},
   type        = {Certification Specification},
   address     = {Cologne, Germany},
   groups      = {norms},
@@ -3990,6 +4012,87 @@ and Guidance Material for Large Rotorcraft CS-29},
   address     = {Cologne, Germany},
   groups      = {norms},
 }
+
+@TechReport{EASA_CS_31GB,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Free Gas Balloons CS-31GB},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-31gb-gas-balloons#cs-31gb-gas-balloons},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_31HB,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Hot Air Balloons CS-31HB},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-31hb-hot-air-balloons#cs-31hb-hot-air-balloons},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+
+@TechReport{EASA_CS_31TGB,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Tethered Gas Balloons CS-31TGB},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-31tgb-tethered-gas-balloons#cs-31tgb-tethered-gas-balloons},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+
+@TechReport{EASA_CS_LSA,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Light Sport Aeroplanes CS-LSA},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-lsa-light-sport-aeroplanes#cs-lsa-light-sport-aeroplanes},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_P,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Propellers (CS-P)},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-p-propellers#cs-p-propellers},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_VLA,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications for Very Light Aeroplanes CS-VLA},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-vla-very-light-aeroplanes#cs-vla-very-light-aeroplanes},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_VLR,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Very Light Rotorcraft CS-VLR},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-vlr-very-light-rotorcraft#cs-vlr-very-light-rotorcraft},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+
 
 @MISC{EASA_Homepage,
   author      = {{European Union Aviation Safety Agency}},
@@ -4532,10 +4635,6 @@ Part 1: Flow capacities up to and including 120 g/s},
 }
 
 
-
-/* -------------------------------------------------------------------------- */
-
-
 @TechReport{adr_2023,
   author      = {{UNECE}},
   institution = {UNECE},
@@ -4561,6 +4660,17 @@ Part 1: Flow capacities up to and including 120 g/s},
   author={Simon, John M and Brady, Stephen and Lowell, Dana and Quant, Michael},
   year={2007}
 }
+
+@TechReport{ansi_standard_2018,
+  author      = {ANSI},
+  institution = {ANSI},
+  title       = {ANSI/AIAA S-081B-2018 Space Systems—Composite Overwrapped Pressure Vessels},
+  url = {https://webstore.ansi.org/standards/aiaa/ansiaiaa081b2018},
+  urldate = {2024-09-24},
+  type        = {Certification Specification},
+  groups      = {norms},
+}
+
 
 
 @MISC{tped,
@@ -4724,6 +4834,58 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups    = {standards_section},
 }
 
+@Article{Kun2011,
+  author       = {Kun, Yang and Cunxi, Liu},
+  date         = {2011},
+  journaltitle = {Procedia Engineering},
+  title        = {Comparison on the Ways of Airworthiness Management of Civil Aircraft Design Organization},
+  doi          = {10.1016/j.proeng.2011.10.045},
+  issn         = {1877-7058},
+  pages        = {388--395},
+  volume       = {17},
+  groups       = {airacft_subsection},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ramadhanti2024,
+  author       = {Ramadhanti, Nurfrida Nashira and Pasaribu, Hisar Manongam},
+  date         = {2024-01},
+  journaltitle = {Warta Penelitian Perhubungan},
+  title        = {Comparative Analysis of Aircraft Modification Processes: EASA, FAA, and DGCA Indonesia},
+  doi          = {10.25104/warlit.v35i2.2314},
+  issn         = {0852-1824},
+  number       = {2},
+  pages        = {189--200},
+  volume       = {35},
+  groups       = {airacft_subsection},
+  publisher    = {Badan Kebijakan Transportasi},
+}
+
+@Article{Purton2014,
+  author       = {Purton, Leon and Kourousis, Kyriakos},
+  date         = {2014},
+  journaltitle = {Procedia Engineering},
+  title        = {Military Airworthiness Management Frameworks: A Critical Review},
+  doi          = {10.1016/j.proeng.2014.09.111},
+  issn         = {1877-7058},
+  pages        = {545--564},
+  volume       = {80},
+  groups       = {airacft_subsection},
+  publisher    = {Elsevier BV},
+}
+
+@Article{olivotto2012certification,
+  author    = {Olivotto, Constantin and Tataru, Simion and Stefan, Vasile},
+  title     = {CERTIFICATION-The final and critical stage of every civil or military aviation program},
+  number    = {2},
+  pages     = {157},
+  volume    = {4},
+  groups    = {airacft_subsection},
+  journal   = {INCAS Bulletin},
+  publisher = {INCAS-National Institute for Aerospace Research" Elie Carafoli"},
+  year      = {2012},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -4746,8 +4908,9 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
-2 StaticGroup:standards_section\;0\;0\;0x7c7c7cff\;\;\;;
+2 StaticGroup:standards_section\;0\;1\;0x7c7c7cff\;\;\;;
 3 StaticGroup:strandard_defintion\;0\;0\;0x707070ff\;\;\;;
+3 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
 1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
